--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
+      <h1 id="excuse"></h1>
       <img src="./rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
         If this text is <b>not</b> centered and <b>yellow</b>, you probably have
@@ -26,4 +26,5 @@
       </div>
     </div>
   </body>
+  <script src="src/app.js"></script>
 </html>
